--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "hanafalah/laravel-support": "dev-main"
+        "hanafalah/laravel-support": "@dev"
     },
     "minimum-stability": "dev",
     "prefer-stable": false
